# stat-toolkits-eif

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  TRIAL_GUIDE.md  VERSION.md  pyproject.toml
.github/workflows/: ci.yml
agent/: eif_agent_task_spec.md  eif_answer_rubric.md  eif_danger_zone.md  eif_hard_problem_protocol.md  eif_implementation_guide.md  eif_latex_problem_protocol.md  eif_problem_artifacts.md  eif_research_problem_protocol.md  eif_target_triage.md  eif_validation_tests.md
eif_toolkit/: __init__.py  registry_validation.py
examples/: eif_benchmark_tasks.md  eif_examples.md  eif_formula_registry.yaml  eif_formula_registry_schema.md  eif_hard_benchmark_tasks.md  eif_workflow_examples.md
problems/latex_inbox/: README.md
problems/latex_inbox/problem_001/: notes.md  problem.tex  solution.md
problems/latex_inbox/problem_002/: notes.md  problem.tex  solution.md
problems/latex_inbox/problem_003/: problem.tex
references/: README.md
scripts/: validate_formula_registry.py
simulations/: eif_simulation_tests.md
tests/: test_registry.py
theory/: eif_plsim_worked_derivation.md  eif_projection_guide.md  eif_references.md  eif_restricted_moment_worked_derivation.md  eif_worked_derivations.md  semiparametric_influence_function_guide.md
